Fix image alignment in card component styles

--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -338,11 +338,11 @@ ul.row {
     overflow: hidden;
 }
 
-.card-work .card-image {
+.card-work .card-image img {
     height: 30rem;
     width: 100%;
     object-fit: cover;
-    align-items: center;
+    vertical-align: center;
 }
 
 .card-work .card-inner {
